syntax = "proto3";

option csharp_namespace = "IT_Shop.Customers.Api.Generated";

package generated;

service CustomersService {
    rpc Get (CustomerQuery) returns (CustomerModel);
    rpc GetAll (BrowseCustomersQuery) returns (CustomersModel);
}

message BrowseCustomersQuery {
    int32 page = 1;
    int32 howMany = 2;    
}

message CustomerQuery {
    string id = 1;
}

message CustomersModel {
    repeated CustomerModel customers = 1;
}

message CustomerModel {
    string id = 1;
    string name = 2;
}